config checker rtainting